Fix readme wrt providers